--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>title</title>
-  </head>
-  <body>
-    <h1>Pig Latinizer</h1>
-  
-  </body>
-</html>
+
+    <h1>Pig Latinizer!</h1>
+      <form method="POST" action="/piglatinize">
+      <p>Enter your phrase: <input type="text" name="user_phrase"/> </p>
+      </form>
